2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h: Use _WIN32 instead of HAVE_W32_SYSTEM.

2007-09-07  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (assuan_inquire_ext): If MAXLEN is 0, still
	initialize MEMBUF.
	
	* assuan-inquire.c (_assuan_inquire_ext_cb): Clear CTX->in_inquire
	before invoking callback and returning.

2007-09-05  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-handler.c (dispatch_command): Return non-critical errors
	with PROCESS_DONE ().

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: Add missing symbol renames
	with _ASSUAN_PREFIX.

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: Add missing symbol renames
	with _ASSUAN_PREFIX.

	* assuan.h (assuan_inquire_ext): Move buffer and buffer_length
	arguments callback in prototype.
	* assuan-defs.h (struct assuan_context_s): Remove members
	inquire_r_buffer and inquire_r_buffer_len.  Add buffer and buffer
	length arguments to inquire_cb.
	* assuan-inquire.c (_assuan_inquire_ext_cb): Return buffer and
	buffer length via callback.
	(assuan_inquire_ext): Move buffer and buffer length arguments to
	callback.

2007-08-24  Werner Koch  <wk@g10code.com>

	Switched license to back to LGPLv2.1.

2007-08-09  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (assuan_process_done, assuan_inquire_ext): New
	prototypes.
	* assuan-defs.h (struct assuan_context_s): New members
	in_process_next, in_command, inquire_cb, inquire_cb_data,
	inquire_r_buffer, inquire_r_buffer_len, inquire_membuf.
	(_assuan_inquire_ext_cb, _assuan_inquire_release): New prototypes.
	* assuan-handler.c (PROCESS_DONE): New macro.
	(dummy_handler, std_handler_nop, std_handler_cancel)
	(std_handler_option, std_handler_bye, std_handler_auth)
	(std_handler_reset, std_handler_end): Use PROCESS_DONE to
	optionally call assuan_process_done if CTX->in_process_next is
	true.
	(assuan_process_done, process_next): New functions.