@@ -1,3 +1,9 @@
+2007-09-14  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-pipe-connect.c (do_finish) [HAVE_W32_SYSTEM]: Close
+	ctx->pid as handle.
+	(pipe_connect_w32): Save the spawned processes handle.
+
 2007-09-11  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.h: Use _WIN32 instead of HAVE_W32_SYSTEM.
